<resources>
    <string name="app_name" translatable="false">Party maker</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>

    <string name="welcome">Welcome to Party maker!</string>
    <string name="party_maker_icon">Application icon</string>
    <string name="action_register">Register</string>
    <string name="welcome_activity_name" translatable="false">WelcomeActivity</string>

    <string name="login_text">Let\'s the party begin!</string>
    <string name="login_email_text">Email address</string>
    <string name="login_password_input">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_email_input_required_message">Email is required</string>
    <string name="login_password_input_required_message">Password is required</string>
    <string name="password_min_length_error_message">Password must have at least %1$d characters</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Login</string>
    <string name="email_required_error_message">Email is required</string>
    <string name="email_not_valid_error_message">Email is not valid</string>
    <string name="register_activity_text">Register</string>
    <string name="register_password_input_confirm">Confirm password</string>
    <string name="register_userName_hint">User name</string>
    <string name="username_required">User name is required</string>
    <string name="password_confirmation_not_match">Password confirmation not equal to password</string>
    <string name="password_confirmation_required">Password confirmation is required</string>
    <string name="event_name_input_hint">Event\'s name</string>
    <string name="event_description_hint">Event\'s description</string>
    <string name="create_event_text">Create your event!</string>
    <string name="select_photo_text">Select photo for event:</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="make_photo">Make photo</string>
    <string name="add_event_button">Add event</string>
    <string name="pick_time">pick time</string>
    <string name="place_hint">place of the event</string>
    <string name="registration_date_text">since: %s</string>
    <string name="profile_rating_text">rating: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details_of_event">Details of event:</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="description">Description:</string>
    <string name="place">Place:</string>
    <string name="get_directions_on_google_maps">Get directions on google maps</string>
    <string name="participate">Participate!</string>
    <string name="share">Share!</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="participants">Participants:</string>
    <string name="type_message">Type message</string>
    <string name="send">Send</string>
    <string name="sendername">SenderName</string>
    <string name="message_content">Message content</string>
    <string name="event_name_string">event name</string>
    <string name="event_description_string">description</string>
    <string name="music_genre">Music genre</string>
    <string name="pick_date">Pick date</string>
    <string name="select_photo">Select photo</string>
    <string name="show_event_details">Show event details</string>
    <string name="events_messages">Events messages:</string>
    <string name="no_messages_to_show">No messages to show!</string>
    <string name="logout">logout</string>
    <string name="save_changes">Save changes</string>
    <string name="profile_picture">Profile picture</string>
    <string name="email" translatable="false">email</string>
    <string name="role">role</string>
    <string name="events_to_review">Events to review</string>
    <string name="your_events">Your events</string>
    <string name="events_you_participate_in">Events you participate in</string>
    <string name="events_you_follow">Events you follow</string>
    <string name="seems_like_you_don_t_have_any_events_here">Seems like you don\'t have any events here</string>
    <string name="search_events">Search events</string>
    <string name="user_name">User name</string>

</resources>